gitOps/infra/argo-workflows/workflows-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-ingress
  namespace: argo-workflows
  annotations:
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" 
spec:
  rules:
  - host: workflow.k3s.szlab.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-workflows-server
            port:
              number: 2746
